--- a/RegistrationViewControlier/Storyboards/Base.lproj/Main.storyboard
+++ b/RegistrationViewControlier/Storyboards/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="43" translatesAutoresizingMaskIntoConstraints="NO" id="WzR-Yi-9vw">
-                                <rect key="frame" x="32" y="298" width="326" height="249"/>
+                                <rect key="frame" x="32" y="298" width="326" height="247"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="tbN-xQ-Jc9">
                                         <rect key="frame" x="0.0" y="0.0" width="326" height="98"/>
@@ -36,7 +36,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="42" translatesAutoresizingMaskIntoConstraints="NO" id="WsL-hF-FTA">
-                                        <rect key="frame" x="0.0" y="141" width="326" height="108"/>
+                                        <rect key="frame" x="0.0" y="141" width="326" height="106"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lEp-Hc-fx6">
                                                 <rect key="frame" x="136.5" y="0.0" width="53" height="36"/>
@@ -48,11 +48,12 @@
                                                     <segue destination="oj6-IP-9oM" kind="presentation" identifier="openWelcomeVC" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="cGW-gE-6xt"/>
                                                 </connections>
                                             </button>
-                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="78" translatesAutoresizingMaskIntoConstraints="NO" id="s27-0T-zsR">
-                                                <rect key="frame" x="0.0" y="78" width="326" height="30"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="60" translatesAutoresizingMaskIntoConstraints="NO" id="s27-0T-zsR">
+                                                <rect key="frame" x="23.5" y="78" width="279" height="28"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DY7-eN-OoP">
-                                                        <rect key="frame" x="0.0" y="0.0" width="133" height="30"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="118" height="28"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                         <state key="normal" title="Forgot User Name?"/>
                                                         <connections>
@@ -60,7 +61,8 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bDf-e6-zcS">
-                                                        <rect key="frame" x="211" y="0.0" width="115" height="30"/>
+                                                        <rect key="frame" x="178" y="0.0" width="101" height="28"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                         <state key="normal" title="Forgot Pssword?"/>
                                                         <connections>
@@ -166,37 +168,37 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="itv-A8-Kyg">
-                                <rect key="frame" x="54" y="484.5" width="308" height="198.5"/>
+                                <rect key="frame" x="54" y="484.5" width="348" height="198.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="fEG-ig-N6Q">
-                                        <rect key="frame" x="0.0" y="0.0" width="96" height="198.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="198.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ozp-86-Dxn">
-                                                <rect key="frame" x="0.0" y="0.0" width="96" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="100" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Surname:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NdY-RY-ljZ">
-                                                <rect key="frame" x="0.0" y="44.5" width="96" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="44.5" width="100" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Company" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uv2-mx-rDv">
-                                                <rect key="frame" x="0.0" y="89" width="96" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="89" width="100" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Department:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="edz-Xy-c9l">
-                                                <rect key="frame" x="0.0" y="133.5" width="96" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="133.5" width="100" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Position:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mHB-zL-RsE">
-                                                <rect key="frame" x="0.0" y="178" width="96" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="178" width="100" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -207,42 +209,39 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="asu-nw-2E5">
-                                        <rect key="frame" x="108" y="0.0" width="200" height="198.5"/>
+                                        <rect key="frame" x="112" y="0.0" width="236" height="198.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LMB-zo-ZIO">
-                                                <rect key="frame" x="0.0" y="0.0" width="200" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="236" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a3d-DT-ych">
-                                                <rect key="frame" x="0.0" y="44.5" width="200" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="44.5" width="236" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jmh-rj-zfP">
-                                                <rect key="frame" x="0.0" y="89" width="200" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="89" width="236" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8JO-U0-H61">
-                                                <rect key="frame" x="0.0" y="133.5" width="200" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="133.5" width="236" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YzJ-og-BMl">
-                                                <rect key="frame" x="0.0" y="178" width="200" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="178" width="236" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="200" id="PW0-D1-eOW"/>
-                                        </constraints>
                                     </stackView>
                                 </subviews>
                             </stackView>
@@ -250,15 +249,15 @@
                         <viewLayoutGuide key="safeArea" id="hfL-Ny-LQE"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="hfL-Ny-LQE" firstAttribute="bottom" secondItem="itv-A8-Kyg" secondAttribute="bottom" constant="130" id="7GC-MX-YKt"/>
                             <constraint firstItem="itv-A8-Kyg" firstAttribute="leading" secondItem="hfL-Ny-LQE" secondAttribute="leading" constant="54" id="7ot-rY-EVd"/>
                             <constraint firstItem="Snj-8a-OM0" firstAttribute="top" secondItem="hfL-Ny-LQE" secondAttribute="top" constant="40" id="8QU-mH-CQr"/>
+                            <constraint firstItem="hfL-Ny-LQE" firstAttribute="bottom" secondItem="itv-A8-Kyg" secondAttribute="bottom" constant="130" id="fTM-gd-RXQ"/>
                             <constraint firstItem="Snj-8a-OM0" firstAttribute="leading" secondItem="hfL-Ny-LQE" secondAttribute="leading" constant="100" id="od5-zL-Rgg"/>
                             <constraint firstItem="hfL-Ny-LQE" firstAttribute="trailing" secondItem="itv-A8-Kyg" secondAttribute="trailing" constant="12" id="yFI-hu-gT3"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="AGq-n4-sOE">
-                        <barButtonItem key="rightBarButtonItem" title="About me" id="sp1-JQ-gbv">
+                        <barButtonItem key="rightBarButtonItem" title="About me" style="done" id="sp1-JQ-gbv">
                             <connections>
                                 <segue destination="woq-tq-SVt" kind="show" id="DNj-ws-7xV"/>
                             </connections>
@@ -339,6 +338,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="DPb-BU-6ag">
                         <rect key="frame" x="0.0" y="48" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
